# poker-chip-split

./: .gitignore  LICENSE  README.md  calculate_example.yaml  dev-environment.yml  distribute_example.yaml  example_config.yaml  example_custom_values.yaml  example_large_buyin.yaml  example_usage.py  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: commit-message.prompt.md
src/poker_chip_split/: __init__.py  __main__.py  calculator.py  cli.py  config.py  models.py
tests/: test_calculator.py  test_config.py  test_models.py
